# ECE260CLab3

./: .gitignore
1d-filter/: 1dFilter  CMakeCache.txt  CMakeLists.txt  README  cmake_install.cmake
1d-filter/src/: fir_gpu.cu  main.cpp
2d-Sobel-edge-filter/: 2dSorbelEdgeFilter  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
2d-Sobel-edge-filter/src/: main.cpp
2d-blur-filter/: 2dBlurFilter  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake
2d-blur-filter/src/: filter.cu  main.cpp
2d-sobel-edge-filter/: CMakeLists.txt
2d-sobel-edge-filter/src/: filter.cu  main.cpp
